--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     </div>
 
     <script src="ahorcado.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script src="main.js"></script>
 </body>
