--- a/index.html
+++ b/index.html
@@ -23,32 +23,33 @@
 
             </div>
             <div id="tablero">
-                <button onclick="seleccionarLetra('A')">A</button>
-                <button onclick="seleccionarLetra('B')">B</button>
-                <button onclick="seleccionarLetra('C')">C</button>
-                <button onclick="seleccionarLetra('D')">D</button>
-                <button onclick="seleccionarLetra('E')">E</button>
-                <button onclick="seleccionarLetra('F')">F</button>
-                <button onclick="seleccionarLetra('G')">G</button>
-                <button onclick="seleccionarLetra('H')">H</button>
-                <button onclick="seleccionarLetra('I')">I</button>
-                <button onclick="seleccionarLetra('J')">J</button>
-                <button onclick="seleccionarLetra('K')">K</button>
-                <button onclick="seleccionarLetra('L')">L</button>
-                <button onclick="seleccionarLetra('M')">M</button>
-                <button onclick="seleccionarLetra('N')">N</button>
-                <button onclick="seleccionarLetra('O')">O</button>
-                <button onclick="seleccionarLetra('P')">P</button>
-                <button onclick="seleccionarLetra('Q')">Q</button>
-                <button onclick="seleccionarLetra('R')">R</button>
-                <button onclick="seleccionarLetra('S')">S</button>
-                <button onclick="seleccionarLetra('T')">T</button>
-                <button onclick="seleccionarLetra('U')">U</button>
-                <button onclick="seleccionarLetra('V')">V</button>
-                <button onclick="seleccionarLetra('W')">W</button>
-                <button onclick="seleccionarLetra('X')">X</button>
-                <button onclick="seleccionarLetra('Y')">Y</button>
-                <button onclick="seleccionarLetra('Z')">Z</button>
+                <button class="A" onclick="seleccionarLetra('A')">A</button>
+                <button class="B" onclick="seleccionarLetra('B')">B</button>
+                <button class="C" onclick="seleccionarLetra('C')">C</button>
+                <button class="D" onclick="seleccionarLetra('D')">D</button>
+                <button class="E" onclick="seleccionarLetra('E')">E</button>
+                <button class="F" onclick="seleccionarLetra('F')">F</button>
+                <button class="G" onclick="seleccionarLetra('G')">G</button>
+                <button class="H" onclick="seleccionarLetra('H')">H</button>
+                <button class="I" onclick="seleccionarLetra('I')">I</button>
+                <button class="J" onclick="seleccionarLetra('J')">J</button>
+                <button class="K" onclick="seleccionarLetra('K')">K</button>
+                <button class="L" onclick="seleccionarLetra('L')">L</button>
+                <button class="M" onclick="seleccionarLetra('M')">M</button>
+                <button class="N" onclick="seleccionarLetra('N')">N</button>
+                <button class="O" onclick="seleccionarLetra('O')">O</button>
+                <button class="P" onclick="seleccionarLetra('P')">P</button>
+                <button class="Q" onclick="seleccionarLetra('Q')">Q</button>
+                <button class="R" onclick="seleccionarLetra('R')">R</button>
+                <button class="S" onclick="seleccionarLetra('S')">S</button>
+                <button class="T" onclick="seleccionarLetra('T')">T</button>
+                <button class="U" onclick="seleccionarLetra('U')">U</button>
+                <button class="V" onclick="seleccionarLetra('V')">V</button>
+                <button class="W" onclick="seleccionarLetra('W')">W</button>
+                <button class="X" onclick="seleccionarLetra('X')">X</button>
+                <button class="Y" onclick="seleccionarLetra('Y')">Y</button>
+                <button class="Z" onclick="seleccionarLetra('Z')">Z</button>
+
             </div>
         </div>
     </div>
