--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 
 <body>
-    <img src="fondo.jpg" alt="">
-
+    <img id="fondo" src="fondo.jpg" alt="">
 
     <div class="seccion-principal">
-        <h1 class="titulo-principal">Pescaderia</h1>
+        <h1 class="titulo-principal">La escollera marplatense
+        </h1>
         <button class="boton-seccion-principal" onclick="mostrarProductosSeccion()">Ver Productos</button>
         <button class="boton-seccion-principal" onclick="mostrarProductosSeccion()">Ver Pagos</button>
         <div class="juego">
             <button onclick="comenzarJuego()">Comenzar</button>
             <p id="vidas"></p>
             <div id="mesa">
-
+                
             </div>
             <div id="tablero">
                 <button class="A" onclick="seleccionarLetra('A')">A</button>
