boton para borrar

--- a/qr.html
+++ b/qr.html
@@ -27,6 +27,7 @@
 				</select>
 				
 				<button class="btn" onclick="generarQR()">Generar QR</button>
+				<button class="btn" onclick="borrarItemLocalStorage('QRS')">Borrar Codigos</button>
 				<a href="index.html"><button>Volver</button></a>
 			<div id="contenedorQR" class="contenedorQR"></div>
 		</div>
